
import { ValueObject } from "../core/domain/ValueObject";
import { Result } from "../core/logic/Result";
import { Guard } from "../core/logic/Guard";

export enum CategoriaSala{
  laboratorio,
  anfiteatro,
  gabinete,
}