export interface Sala {
    descricao: string;
    categoria: string;
    designacao: string;
    piso: string;
  }